--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Mahbubur Rahman, an experienced SEO developer, offering expert search engine optimization services to help your business achieve higher visibility and rankings online. Learn more about my strategies and services.">
+    <meta name="keywords" content="Mahbubur Rahman, SEO developer, search engine optimization, SEO services, website optimization, digital marketing, online visibility">
     <link rel="icon" type="image/png" href="./api/img/logo_final.jpg">
 
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
