--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
                             <a href="#contact">
                                 <button>Contact Now</button>
                             </a>
-                            <a href="./api/pdf/CV PDF.pdf" target="_blank" id="cv">
+                            <a href="./api/pdf/CV PDF.pdf" download="./api/pdf/CV PDF.pdf" target="_blank" id="cv">
                                 <button>Download CV</button>
                             </a>
                         </div>
